corrected some styling issues on smaller screens

--- a/client/src/stylesheets/ratings_review/ratingBreakdown.css
+++ b/client/src/stylesheets/ratings_review/ratingBreakdown.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  width: 15%;
+  width: 300px;
   height: 100%;
   margin-right: 40px;
 }
